# poker-trainer

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  deps.py  sse.py
backend/app/domain/: game_manager.py  poker_adapter.py
backend/app/reasoning/: base.py
backend/app/routes/: coach.py  game.py  health.py  range.py  reason.py  review.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.tsx
frontend/src/lib/: api.ts  sse.ts  store.ts
tests/domain/: test_allin_closed.py  test_board_features.py  test_btn_rotation.py  test_hu_flow.py  test_multiway_showdown.py  test_side_pots.py  test_state_backcompat.py
