[project]
name = "poker-player"
version = "0.1.0"
description = "Texas Holdem' Coach"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.8.0",
    "pokerkit>=0.5.0",
    "pytest>=7.4.0",
]
